crates/dsrs-macros/tests/ui/render_invalid_key.stderr
error: expected #[render(jinja = "...")]
 --> tests/ui/render_invalid_key.rs:6:5
  |
6 |     #[render(template = "{{ this }}")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
